[package]
authors = ["enzo"]
edition = "2021"
name = "image-sequencer"
rust-version = "1.65"
version = "0.1.0"

[dependencies]
eframe = {version = "0.22.0", default-features = false, features = [
  "accesskit", # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow", # Use the glow rendering backend. Alternative: "wgpu".
  "persistence", # Enable restoring app state when restarting the app.
]}
egui = "0.22.0"
log = "0.4"
egui_extras = {version = "0.22.0", features = ["image"]}
nfd = "0.0.4"
walkdir = "2.3.3"
notify = "6.0.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
